--- a/back-rest-board/src/main/resources/application.properties
+++ b/back-rest-board/src/main/resources/application.properties
@@ -6,9 +6,9 @@ server.port=9999
 
 #db setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ssafy_board?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/fitboard?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=ssafy
 
 
 #mybatis
