--- a/back-rest-board/src/main/resources/application.properties
+++ b/back-rest-board/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.port=9999
 
 #db setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ssafy_board?serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/fitboard_db?serverTimezone=UTC
+spring.datasource.username=ssafy
 spring.datasource.password=1234
 
 
