--- a/back-rest-board/src/main/resources/application.properties
+++ b/back-rest-board/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #context-path
 #server.servlet.context-path=/board
-
+server.port=9999
 #db setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
